--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@ maximum-scale=1.0,user-scalable=0"
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Happy Diwali!</title>
+    <title>AppOpener: India ka apna opener!</title>
   </head>
   <body>
     <noscript>Smarten your Links</noscript>
@@ -81,17 +81,30 @@ maximum-scale=1.0,user-scalable=0"
       crossorigin="anonymous"
     ></script>
     <!-- responsive -->
-    <!-- <ins
+    <ins
       class="adsbygoogle"
       style="display: block"
       data-ad-client="ca-pub-5645705217995911"
       data-ad-slot="9492391764"
       data-ad-format="auto"
       data-full-width-responsive="true"
-    ></ins> -->
+    ></ins>
     <script>
       (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5645705217995911"
+     crossorigin="anonymous"></script>
+<!-- Diwali1 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5645705217995911"
+     data-ad-slot="6109298143"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     
     
 
