--- a/public/index.html
+++ b/public/index.html
@@ -75,36 +75,36 @@ maximum-scale=1.0,user-scalable=0"
       }
     </script> -->
 
-    <script
+<!--     <script
       async
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5645705217995911"
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
     <!-- responsive -->
-    <ins
+<!--     <ins
       class="adsbygoogle"
       style="display: block"
       data-ad-client="ca-pub-5645705217995911"
       data-ad-slot="9492391764"
       data-ad-format="auto"
       data-full-width-responsive="true"
-    ></ins>
-    <script>
+    ></ins> -->
+<!--     <script>
       (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
+    </script> -->
 
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5645705217995911"
-     crossorigin="anonymous"></script>
+<!--     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5645705217995911"
+     crossorigin="anonymous"></script> -->
 <!-- Diwali1 -->
-<ins class="adsbygoogle"
+<!-- <ins class="adsbygoogle"
      style="display:block"
      data-ad-client="ca-pub-5645705217995911"
      data-ad-slot="6109298143"
      data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
+     data-full-width-responsive="true"></ins> -->
+<!-- <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+</script> -->
     
     
 
